--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
   margin: 0;
   padding: 0;
@@ -34,6 +35,16 @@ table {
 h1, h2, h3, p, div, span, li, a {
   font-family: "Poppins", sans-serif; }
 
+h2 {
+  font-size: 2em;
+  font-weight: bold;
+  color: white;
+  margin-bottom: 30px;
+  text-decoration: underline; }
+
+p {
+  font-size: 1.2em; }
+
 body {
   height: 100vh; }
   body .swiper-container {
@@ -65,3 +76,95 @@ body {
         body .swiper-container .swiper-wrapper .intro p span {
           display: block;
           text-decoration: underline; }
+    body .swiper-container .swiper-wrapper .what {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex; }
+      body .swiper-container .swiper-wrapper .what div {
+        width: 50%; }
+      body .swiper-container .swiper-wrapper .what div:first-child {
+        background-color: #DD2222;
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+        flex-direction: column;
+        -webkit-box-pack: center;
+        -ms-flex-pack: center;
+        justify-content: center;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        align-items: center; }
+        body .swiper-container .swiper-wrapper .what div:first-child p {
+          width: 50%;
+          margin-bottom: 30px;
+          color: white;
+          line-height: 1.4em; }
+          body .swiper-container .swiper-wrapper .what div:first-child p span {
+            font-weight: bold;
+            color: black; }
+      body .swiper-container .swiper-wrapper .what div:nth-child(2) div:first-child {
+        background-color: lightgrey; }
+        body .swiper-container .swiper-wrapper .what div:nth-child(2) div:first-child h2 {
+          color: black; }
+        body .swiper-container .swiper-wrapper .what div:nth-child(2) div:first-child p {
+          color: black;
+          text-align: center; }
+        body .swiper-container .swiper-wrapper .what div:nth-child(2) div:first-child ul li {
+          margin-bottom: 10px;
+          list-style-type: square; }
+      body .swiper-container .swiper-wrapper .what div:nth-child(2) div:nth-child(2) {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+        flex-direction: column;
+        -webkit-box-pack: center;
+        -ms-flex-pack: center;
+        justify-content: center;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        align-items: center; }
+        body .swiper-container .swiper-wrapper .what div:nth-child(2) div:nth-child(2) h2 {
+          color: black; }
+        body .swiper-container .swiper-wrapper .what div:nth-child(2) div:nth-child(2) p {
+          width: 50%;
+          line-height: 1.4em;
+          text-align: center; }
+          body .swiper-container .swiper-wrapper .what div:nth-child(2) div:nth-child(2) p span {
+            font-weight: bold;
+            color: #DD2222; }
+      body .swiper-container .swiper-wrapper .what div:nth-child(2) div {
+        width: 100%;
+        height: 50vh; }
+    body .swiper-container .swiper-wrapper .contrat {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex; }
+      body .swiper-container .swiper-wrapper .contrat div {
+        width: 50%; }
+      body .swiper-container .swiper-wrapper .contrat div:first-child {
+        background-color: #DD2222;
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+        flex-direction: column;
+        -webkit-box-pack: center;
+        -ms-flex-pack: center;
+        justify-content: center;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        align-items: center; }
+
+.swiper-container-rtl .swiper-button-next.swiper-button-black, .swiper-container-rtl .swiper-button-prev.swiper-button-black {
+  background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D'http%3A%2F%2Fwww.w3.org%…2L2.9%2C2.1L5%2C0L27%2C22L27%2C22z'%20fill%3D'%23000000'%2F%3E%3C%2Fsvg%3E"); }
+
+.swiper-pagination-progressbar .swiper-pagination-progressbar-fill {
+  background: #000000; }
