--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -40,6 +40,21 @@ body{
 						text-decoration: underline;
 					}
 				}
+				a{
+					display: block;
+					color: $firstColor;
+					padding: 15px 30px;
+					background-color: white;
+					margin-top: 30px;
+					text-decoration: none;
+					transition: all 0.3s ease;
+					&:hover{
+						background-color: black;
+						color: white;
+						transform: scale(1.1);
+						transition: all 0.3s ease;
+					}
+				}
 			}
 			.what{
 				display: flex;
@@ -114,6 +129,81 @@ body{
 					flex-direction: column;
 					justify-content: center;
 					align-items: center;
+					p{
+						color: white;
+						line-height: 1.4em;
+					}
+					ul{
+						margin-top: 30px;
+						li{
+							margin-bottom: 15px;
+							list-style-type: square;
+							color: white;
+						}
+					}
+				}
+				.etapes{
+					height: 100vh;
+					overflow: auto;
+					.box{
+						height: 100vh;
+						width: 100%;
+						background-color: white;
+						display: flex;
+						flex-direction: column;
+						justify-content: center;
+						align-items: center;
+					}
+					.box:first-child{
+						h2,h3,p,li{
+							color: black;
+						}
+						h3{
+							font-size: 1.3em;
+							color: $firstColor;
+							margin-bottom: 30px;
+						}
+						p{
+							font-size: 1em;
+						}
+						ul{
+							li{
+								font-size: 1.2em;
+								ul.souslist{
+									margin-top: 0;
+									li{
+										font-size: 0.8em;
+										color: $firstColor;
+									}
+									li:first-child{
+										margin-top: 15px;
+									}
+								}
+							}
+						}
+					}
+					.box:nth-child(2), .box:nth-child(3) {
+						background-color: lightgrey;
+						h3{
+							font-size: 1.3em;
+							color: $firstColor;
+							margin-bottom: 30px;
+						}
+						ul{
+							width: 50%;
+							list-style-type: square;
+							li{
+								margin-bottom: 15px;
+								line-height: 1.4em;
+								span{
+									font-weight: bold;
+								}
+							}
+						}
+					}
+					.box:nth-child(3){
+						background-color: white;
+					}
 				}
 			}
 		}
