--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -206,6 +206,86 @@ body{
 					}
 				}
 			}
+			.activite{
+				display: flex;
+				div{
+					width: 50%;
+				}
+				div:first-child{
+					background-color: $firstColor;
+					display: flex;
+					flex-direction: column;
+					justify-content:center;
+					align-items:center;
+					h3{
+						font-size:1.3em;
+						color: white;
+						text-align: left;
+						text-decoration: uderline;
+						margin-bottom: 30px;
+					}
+					p{
+						width: 50%;
+						line-height: 1.4em;
+						text-align: center;
+						color: white;
+						span{
+							font-weight: bold;
+							color: black;
+						}
+					}
+				}
+				div:nth-child(2){
+					div{
+						height: 50vh;
+						width: 100%;
+						display: flex;
+						flex-direction: column;
+						justify-content:center;
+						align-items:center;
+					}
+					div:first-child{
+						background-color: lightgrey;
+						h3,p{
+							color: black;
+						}
+						h3{
+							font-weight: bold;
+						}
+						ul{
+							margin-top: 15px;
+							list-style-type: square;
+							li{
+								margin-bottom: 15px;
+								span{
+									font-weight: bold;
+								}
+							}
+						}
+					}
+					div:nth-child(2){
+						h3{
+							margin-bottom: 30px;
+							font-size: 1.3em;
+							font-weight: bold;
+						}
+						p{
+							margin-bottom: 15px;
+						}
+						ul{
+							list-style-type: square;
+							width: 50%;
+							li{
+								margin-bottom: 15px;
+								line-height: 1.4em;
+								span{
+									font-weight: bold;
+								}
+							}
+						}
+					}
+				}
+			}
 		}
 	}
 }
