--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -457,6 +457,42 @@ body {
             text-align: center; }
             body .swiper-container .swiper-wrapper .schema .down .depenses div p {
               font-size: 1em; }
+    body .swiper-container .swiper-wrapper .recettesList, body .swiper-container .swiper-wrapper .depensesList {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex; }
+      body .swiper-container .swiper-wrapper .recettesList div, body .swiper-container .swiper-wrapper .depensesList div {
+        width: calc(100% / 3);
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+        flex-direction: column;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        align-items: center;
+        -webkit-box-pack: center;
+        -ms-flex-pack: center;
+        justify-content: center; }
+        body .swiper-container .swiper-wrapper .recettesList div h3, body .swiper-container .swiper-wrapper .depensesList div h3 {
+          font-size: 1.3em;
+          font-weight: bold;
+          width: 60%;
+          text-align: center;
+          margin-bottom: 30px; }
+        body .swiper-container .swiper-wrapper .recettesList div p, body .swiper-container .swiper-wrapper .depensesList div p {
+          width: 60%;
+          text-align: center;
+          color: black;
+          line-height: 1.4em; }
+      body .swiper-container .swiper-wrapper .recettesList div:nth-child(2), body .swiper-container .swiper-wrapper .depensesList div:nth-child(2) {
+        background-color: #DD2222; }
+        body .swiper-container .swiper-wrapper .recettesList div:nth-child(2) p, body .swiper-container .swiper-wrapper .depensesList div:nth-child(2) p {
+          color: white; }
+      body .swiper-container .swiper-wrapper .recettesList div:nth-child(3), body .swiper-container .swiper-wrapper .depensesList div:nth-child(3) {
+        background-color: lightgrey; }
 
 .swiper-container-rtl .swiper-button-next.swiper-button-black, .swiper-container-rtl .swiper-button-prev.swiper-button-black {
   background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D'http%3A%2F%2Fwww.w3.org%…2L2.9%2C2.1L5%2C0L27%2C22L27%2C22z'%20fill%3D'%23000000'%2F%3E%3C%2Fsvg%3E"); }
