--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -378,6 +378,38 @@ body{
 					}
 				}
 			}
+			.recettesList, .depensesList{
+				display: flex;
+				div{
+					width: calc(100% / 3);
+					display: flex;
+					flex-direction:column;
+					align-items: center;
+					justify-content:center;
+					h3{
+						font-size: 1.3em;
+						font-weight: bold;
+						width: 60%;
+						text-align: center;
+						margin-bottom: 30px;
+					}
+					p{
+						width: 60%;
+						text-align: center;
+						color: black;
+						line-height: 1.4em;
+					}
+				}
+				div:nth-child(2){
+					background-color: $firstColor;
+					p{
+						color: white;
+					}
+				}
+				div:nth-child(3){
+					background-color: lightgrey;
+				}
+			}
 		}
 	}
 }
